welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: object java.awt.Color is not a value
      faireMotif(Color)
                 ^